Атрибути изображения ползват class=align-center за да се центрират в PDF

--- a/blog/20240219-POS-in-LAN.md
+++ b/blog/20240219-POS-in-LAN.md
@@ -17,7 +17,7 @@
  1. На **POS-PC** от **Start->Run** стартирайте **cliconfg.exe** (На 64-битови OS стартирайте **C:\Windows\SysWOW64\cliconfg.exe**) 
  2. В раздел *Alias* на **Client Network Utility** създавайте нов псевдоним **ucs-instance** (виж т.1 на графиката) по **Named Pipes** (виж т.2) и го насочете към инстанция **DREEM-PC\UCS** (виж т.3)
 
-   ![](20240219-cliconfig.png){ align=center }
+   ![](20240219-cliconfig.png){ class=align-center }
 
  3. На **POS-PC** стартирайте Dreem Pos и проверете дали имате достъп до данните на Dreem Personal на **DREEM-PC**
 Имайте предвид, че при обновяване на реализацията на Dreem Personal трябва на **POS-PC** и на **DREEM-PC** това да се случва едновременно, така че да се използва една и съща реализация на двете машини.
