Редакция 2 - работен вариант на Потребителски дименсии

--- a/blog/20240318-cms.md
+++ b/blog/20240318-cms.md
@@ -1,3 +1,7 @@
+```{only} html
+[Нагоре](000-index)
+```
+
 # Как да настроим Потребителски дименсии
 
 > CMS
@@ -6,7 +10,7 @@
 Списъците може да разглеждаме като каталог, съдържащ всички групи продукти, контрагенти, договори и пр.. И за всяка една от тези групировки трябва да укажем как системата да я третира, което ни води до настройка на Дименсии.
 Нека разгледаме пример, в който искаме да създадем нова категория с продукти. Подкатегориите ще базираме спрямо предназначението на продуктите в офиса.
 
-# Настройка на Списъци
+Настройка на Списъци
 
 1.За да създадем нов списък с дименсии, избираме група функции **Номенклатури || Потребителски дименсии**. 
 В лявата част на *Списъци - Потребителски дименсии* се визуализират на две нива папки *Списъци* и *Дименсии* с тяхното съдържание. Позиционирайки се с десен бутон на мишката върху *Списъци*, избираме *Нов списък...*, при което системата отваря прозорец с празно поле. Тук въвеждаме в свободен текст наименование, в нашия случай "За офиса", и с бутон *Ok* го добавяме като нова категория в *Списъци*. 
@@ -23,7 +27,7 @@
 За да запишем промените, избираме бутон *Запис* от лентата с инструменти, с което съдържанието на списъците е въведено. 
 Във всеки един момент може да редактираме и добавяме нови записи, но не и да изтриваме, когато вече сме използвали настройките в системата. 
  
-# Настройка на Дименсии
+Настройка на Дименсии
 
 Настройката е задължителна, т.к. тук обвързваме всеки предварително въведен списък или с конкретен вид номенклатура, или с типове документи. По този начин определяме дали дименсията ще бъде достъпна във формата за редакция на *Продукти* или на *Контрагенти*, както и в съдържащите ги филтри, или ще касае тип документи.
 > Ако даден списък не се разпредели към Продукти и материали, Контрагенти и поделения или тип документ в *Дименсии*, реквизитът няма да е видим в системата.
