--- a/blog/20240318-cms.md
+++ b/blog/20240318-cms.md
@@ -15,14 +15,14 @@
 1.За да създадем нов списък с дименсии, избираме група функции **Номенклатури || Потребителски дименсии**. 
 В лявата част на *Списъци - Потребителски дименсии* се визуализират на две нива папки *Списъци* и *Дименсии* с тяхното съдържание. Позиционирайки се с десен бутон на мишката върху *Списъци*, избираме *Нов списък...*, при което системата отваря прозорец с празно поле. Тук въвеждаме в свободен текст наименование, в нашия случай "За офиса", и с бутон *Ok* го добавяме като нова категория в *Списъци*. 
 
-![](901-dimensions1.png){ class=align-center }
+![](20240311-dimensions1.png){ class=align-center }
 
 В резултат, вляво ще се появи ред с новодобавената категория.
 За да запишем промените до момента, може да изберем бутон Запис от лентата с инструменти.
 
 2.Системата автоматично ни позиционира в новата категория, така че продължаваме с добавяне на съдържание в нейния списък. За целта вдясно се появява ред за добавяне на нов запис. В колона *Стойност* изписваме наименованието на първата подкатегория и с бутон *Enter* "сваляме" реда надолу в списъка. По този начин се освобождава редът за добавяне на нов запис и може да продължим с въвеждането на подкатегории.
 
-![](902-dimensions2.png){ class=align-center }
+![](20240311-dimensions2.png){ class=align-center }
 
 За да запишем промените, избираме бутон *Запис* от лентата с инструменти, с което съдържанието на списъците е въведено. 
 Във всеки един момент може да редактираме и добавяме нови записи, но не и да изтриваме, когато вече сме използвали настройките в системата. 
@@ -49,7 +49,7 @@
 3.**Списък стойности** — той се настройва задължително единствено за дименсии от тип *Списък* и *Множество*. Тук ,от опционалното меню, трябва да изберем категория от предварително въведените в *Списъци*.
 Нашият пример изисква в новата дименсия "Всичко за офиса" да укажем, че се прилага списъка "За офиса".
 
-![](903-dimensions3.png){ class=align-center }
+![](20240311-dimensions3.png){ class=align-center }
 
 4.**Задължителна** — чрез поставяне на отметка в тази колона на реда с избраната дименсия, може да настроим тя да бъде задължителна настройка. При това положение системата няма да позволява записване на нов продукт или редакция на съществуващ такъв, без да се избере стойност за задължителната дименсия.
 5.**Прецизност** — настройката се използва единствено за числов тип дименсии, като указва до кой знак след десетичната запетая да се закръгли числото.
@@ -60,17 +60,17 @@
 След като сме добавили новата категория "Всичко за офиса", вече може да я използваме в настройките на продуктите. 
 Ако добавяме нов продукт, във форма за редакция се навигираме до панел *Допълнителни || Реквизити: Дименсии*. От падащо меню виждаме списъка с подкатегории, избираме желаната и със *Запис и изход* едновременно запаметяваме промените и излизаме от формата.
 
-![](904-dimensions4.png){ class=align-center }
+![](20240311-dimensions4.png){ class=align-center }
 
 Имаме и друг вариант за настройка на дименсия - от списъка с *Продукти и материали*, без да отваряме формата за редакция на продукта. При този начин за добавяне/редакция на дименсия системата позволява да се маркират множество продукти и едновременно да се избере една обща за тях категория.
 Нека покажем как да настроим продукт "Химикалка", който предварително сме въвели в системата, в категория "Всичко за офиса". Това става, след като го маркираме с десния бутон на мишката и от менюто изберем *Дименсии*.
 
-![](905-dimensions5.png){ class=align-center }
+![](20240311-dimensions5.png){ class=align-center }
 
 Отваря се форма, съдържаща всички записани в системата категории продукти. За да открием по-бързо желаната категория, може да използваме бързия филтър, където търсим по име или част от него.
 Настройваме продукта "Химикалка" в подкатегория "Офис консумативи" от категория "Всичко за офиса".
 
-![](906-dimensions6.png){ class=align-center }
+![](20240311-dimensions6.png){ class=align-center }
 
 Записваме промените с бутон *Ok* и от този момент продуктът ще участва в справките, филтрирани по горните категории.
 
