Редакция тема Как да настроим потребителски дименсии

--- a/blog/20240318-cms.md
+++ b/blog/20240318-cms.md
@@ -4,38 +4,39 @@
 
 # Как да настроим Потребителски дименсии
 
-> CMS
-
 Настройките на *Потребителски дименсии* се изграждат в две стъпки - съставяне на описи в *Списъци* и създаване на *Дименсии*.
 Списъците може да разглеждаме като каталог, съдържащ всички групи продукти, контрагенти, договори и пр.. И за всяка една от тези групировки трябва да укажем как системата да я третира, което ни води до настройка на Дименсии.
-Нека разгледаме пример, в който искаме да създадем нова категория с продукти. Подкатегориите ще базираме спрямо предназначението на продуктите в офиса.
 
-Настройка на Списъци
+Нека разгледаме пример, в който искаме да създадем нов списък с продукти с категория *За офиса*. Подкатегориите в него ще базираме спрямо предназначението на продуктите в офиса.
 
-1.За да създадем нов списък с дименсии, избираме група функции **Номенклатури || Потребителски дименсии**. 
-В лявата част на *Списъци - Потребителски дименсии* се визуализират на две нива папки *Списъци* и *Дименсии* с тяхното съдържание. Позиционирайки се с десен бутон на мишката върху *Списъци*, избираме *Нов списък...*, при което системата отваря прозорец с празно поле. Тук въвеждаме в свободен текст наименование, в нашия случай "За офиса", и с бутон *Ok* го добавяме като нова категория в *Списъци*. 
+Препоръчваме в имената на списъците да добавите и за коя номенклатура или тип документ се отнасят. Това ще помогне за по-лесно и бързо ориентиране в целия набор от списъци. Така категорията от нашия пример бихме могли да изпишем като *Продукти списък За офиса*.
+
+## Настройка на Списъци
+
+За да създадем нов списък, избираме група функции **Номенклатури || Потребителски дименсии**. В лявата част на *Списъци - Потребителски дименсии* се визуализират на две нива папки *Списъци* и *Дименсии* с тяхното съдържание. Позиционирайки се с десен бутон на мишката върху *Списъци*, избираме *Нов списък...*, при което системата отваря прозорец с празно поле. Тук въвеждаме в свободен текст наименование, в нашия случай *Продукти списък за За офиса*, и с бутон *Ok* го добавяме като нова категория в *Списъци*. 
 
 ![](20240311-dimensions1.png){ class=align-center }
 
-В резултат, вляво ще се появи ред с новодобавената категория.
+В резултат, вляво ще се появи новодобавеният ред с категория.
 За да запишем промените до момента, може да изберем бутон Запис от лентата с инструменти.
-
-2.Системата автоматично ни позиционира в новата категория, така че продължаваме с добавяне на съдържание в нейния списък. За целта вдясно се появява ред за добавяне на нов запис. В колона *Стойност* изписваме наименованието на първата подкатегория и с бутон *Enter* "сваляме" реда надолу в списъка. По този начин се освобождава редът за добавяне на нов запис и може да продължим с въвеждането на подкатегории.
+Системата автоматично ни е позиционирала в новата категория, така че продължаваме с добавяне на съдържание в нейния списък. Вдясно, в колона *Стойност*, изписваме наименованието на първата подкатегория и с бутон *Enter* "сваляме" реда надолу в списъка. По този начин се освобождава редът за добавяне на нов запис и може да продължим с въвеждането на останалите подкатегории.
 
 ![](20240311-dimensions2.png){ class=align-center }
 
-За да запишем промените, избираме бутон *Запис* от лентата с инструменти, с което съдържанието на списъците е въведено. 
+Записваме промените с бутон *Запис* от лентата с инструменти, с което съдържанието на списъците е въведено. 
 Във всеки един момент може да редактираме и добавяме нови записи, но не и да изтриваме, когато вече сме използвали настройките в системата. 
  
-Настройка на Дименсии
+## Настройка на Дименсии
 
 Настройката е задължителна, т.к. тук обвързваме всеки предварително въведен списък или с конкретен вид номенклатура, или с типове документи. По този начин определяме дали дименсията ще бъде достъпна във формата за редакция на *Продукти* или на *Контрагенти*, както и в съдържащите ги филтри, или ще касае тип документи.
 > Ако даден списък не се разпредели към Продукти и материали, Контрагенти и поделения или тип документ в *Дименсии*, реквизитът няма да е видим в системата.
 
-1.**Дименсия** — за да завършим настройките на категории, навигираме се до папка *Дименсии*, където посочваме *Контрагенти и поделения*, *Продукти и материали* или избран тип документ (*Договори*, *Документи за продажба* и т.н.).
-В нашия случай настройката касае продуктите, затова маркираме *Продукти и материали* и на появилия се вдясно ред за добавяне на нов запис, в колона *Дименсия*, изписваме името на категорията - "Всичко за офиса". Това наименование ще се появява при избор на дименсия в списъци с продукти и във филтри.
-2.**Тип** — в тази колона, от системно въведеното меню, избираме вида на дименсията, като е възможно да избираме от следните типове:
-    -  тип **Списък** - този тип дименсия ограничено категоризирането само към една от стойностите на списъка.
+1. **Дименсия** — за да завършим настройките на категории, навигираме се до папка *Дименсии*, където посочваме *Контрагенти и поделения*, *Продукти и материали* или избран тип документ (*Договори*, *Документи за продажба* и т.н.).
+В нашия случай настройката касае продуктите, затова маркираме *Продукти и материали* и на появилия се вдясно ред за добавяне на нов запис, в колона *Дименсия*, изписваме името на категорията - "Всичко за офиса". С това наименование ще виждаме дименсията в списъци с продукти и във филтри.
+2. **Тип** — в тази колона, от системно въведеното меню, избираме вида на дименсията. За целите на нашия пример типът трябва да бъде *Списък*. Така, когато настройваме продукт в категория *Всичко за офиса*, ще трябва да изберем или *Офис обзавеждане*, или *Офис периферия, принтери и аксесоари*, или *Офис консумативи*.
+
+Системата дава възможност да избираме от следните типове:
+    -  тип **Списък** - този тип дименсия ограничава категоризирането само към една от стойностите на списъка.
     -  тип **Текст** - този тип дименсия дава възможност за категоризиране по свободно въведен текст, който може да се настрои в отделни шаблони.
     -  тип **Число** - този тип дименсия дава възможност за категоризиране с числови стойности.
     -  тип **Дата** - този тип дименсия дава възможност за категоризиране по дата.
@@ -44,16 +45,16 @@
     -  тип **Множество** - този тип дименсия допуска категоризирането към повече от една стойност на списъка.
     -  тип **RTF** - този тип дименсия дава възможност за категоризиране по свободно въведен текст - Rich Text Format.
     -  тип **HTML** - този тип дименсия дава възможност към продуктите да се настрои HTML код.
-	-  тип **Медия** 
-За целите на нашия пример, типът трябва да бъде *Списък*.
-3.**Списък стойности** — той се настройва задължително единствено за дименсии от тип *Списък* и *Множество*. Тук ,от опционалното меню, трябва да изберем категория от предварително въведените в *Списъци*.
+	-  тип **Медия** -този тип дименсия дава възможност да се настрои връзка към уебсайт.
+
+3. **Списък стойности** — той се настройва задължително единствено за дименсии от тип *Списък* и *Множество*. Тук ,от опционалното меню, трябва да изберем категория от предварително въведените в *Списъци*.
 Нашият пример изисква в новата дименсия "Всичко за офиса" да укажем, че се прилага списъка "За офиса".
 
 ![](20240311-dimensions3.png){ class=align-center }
 
-4.**Задължителна** — чрез поставяне на отметка в тази колона на реда с избраната дименсия, може да настроим тя да бъде задължителна настройка. При това положение системата няма да позволява записване на нов продукт или редакция на съществуващ такъв, без да се избере стойност за задължителната дименсия.
-5.**Прецизност** — настройката се използва единствено за числов тип дименсии, като указва до кой знак след десетичната запетая да се закръгли числото.
-6.**Описание** — тук за всяка дименсия може да се даде кратко описание, което да служи като помощен текст или друго.
+4. **Задължителна** — чрез поставяне на отметка в тази колона на реда с избраната дименсия, може да настроим тя да бъде задължителна настройка. При това положение системата няма да позволява записване на нов продукт или редакция на съществуващ такъв, без да се избере стойност за задължителната дименсия.
+5. **Прецизност** — настройката се използва единствено за числов тип дименсии, като указва до кой знак след десетичната запетая да се закръгли числото.
+6. **Описание** — тук за всяка дименсия може да се даде кратко описание, което да служи като помощен текст или друго.
 
 # Използване на дименсиите в Продукти и материали
 
