--- a/blog/20240318-cms.md
+++ b/blog/20240318-cms.md
@@ -9,19 +9,19 @@
 
 Нека разгледаме пример, в който искаме да създадем нов списък с продукти с категория *За офиса*. Подкатегориите в него ще базираме спрямо предназначението на продуктите в офиса.
 
-Препоръчваме в имената на списъците да добавите и за коя номенклатура или тип документ се отнасят. Това ще помогне за по-лесно и бързо ориентиране в целия набор от списъци. Така категорията от нашия пример бихме могли да изпишем като *Продукти списък За офиса*.
+Препоръчваме в имената на списъците да се добави и за коя номенклатура или тип документ се отнасят. Това ще помогне за по-лесно и бързо ориентиране в целия набор от списъци. Така бихме могли да запишем категорията от нашия пример като *Продукти списък За офиса*.
 
 ## Настройка на Списъци
 
 За да създадем нов списък, избираме група функции **Номенклатури || Потребителски дименсии**. В лявата част на *Списъци - Потребителски дименсии* се визуализират на две нива папки *Списъци* и *Дименсии* с тяхното съдържание. Позиционирайки се с десен бутон на мишката върху *Списъци*, избираме *Нов списък...*, при което системата отваря прозорец с празно поле. Тук въвеждаме в свободен текст наименование, в нашия случай *Продукти списък за За офиса*, и с бутон *Ok* го добавяме като нова категория в *Списъци*. 
 
-![](20240311-dimensions1.png){ class=align-center }
+![](20240318-dimensions1.png){ class=align-center }
 
 В резултат, вляво ще се появи новодобавеният ред с категория.
 За да запишем промените до момента, може да изберем бутон Запис от лентата с инструменти.
 Системата автоматично ни е позиционирала в новата категория, така че продължаваме с добавяне на съдържание в нейния списък. Вдясно, в колона *Стойност*, изписваме наименованието на първата подкатегория и с бутон *Enter* "сваляме" реда надолу в списъка. По този начин се освобождава редът за добавяне на нов запис и може да продължим с въвеждането на останалите подкатегории.
 
-![](20240311-dimensions2.png){ class=align-center }
+![](20240318-dimensions2.png){ class=align-center }
 
 Записваме промените с бутон *Запис* от лентата с инструменти, с което съдържанието на списъците е въведено. 
 Във всеки един момент може да редактираме и добавяме нови записи, но не и да изтриваме, когато вече сме използвали настройките в системата. 
@@ -36,6 +36,7 @@
 2. **Тип** — в тази колона, от системно въведеното меню, избираме вида на дименсията. За целите на нашия пример типът трябва да бъде *Списък*. Така, когато настройваме продукт в категория *Всичко за офиса*, ще трябва да изберем или *Офис обзавеждане*, или *Офис периферия, принтери и аксесоари*, или *Офис консумативи*.
 
 Системата дава възможност да избираме от следните типове:
+
     -  тип **Списък** - този тип дименсия ограничава категоризирането само към една от стойностите на списъка.
     -  тип **Текст** - този тип дименсия дава възможност за категоризиране по свободно въведен текст, който може да се настрои в отделни шаблони.
     -  тип **Число** - този тип дименсия дава възможност за категоризиране с числови стойности.
@@ -50,7 +51,7 @@
 3. **Списък стойности** — той се настройва задължително единствено за дименсии от тип *Списък* и *Множество*. Тук ,от опционалното меню, трябва да изберем категория от предварително въведените в *Списъци*.
 Нашият пример изисква в новата дименсия "Всичко за офиса" да укажем, че се прилага списъка "За офиса".
 
-![](20240311-dimensions3.png){ class=align-center }
+![](20240318-dimensions3.png){ class=align-center }
 
 4. **Задължителна** — чрез поставяне на отметка в тази колона на реда с избраната дименсия, може да настроим тя да бъде задължителна настройка. При това положение системата няма да позволява записване на нов продукт или редакция на съществуващ такъв, без да се избере стойност за задължителната дименсия.
 5. **Прецизност** — настройката се използва единствено за числов тип дименсии, като указва до кой знак след десетичната запетая да се закръгли числото.
@@ -61,17 +62,17 @@
 След като сме добавили новата категория "Всичко за офиса", вече може да я използваме в настройките на продуктите. 
 Ако добавяме нов продукт, във форма за редакция се навигираме до панел *Допълнителни || Реквизити: Дименсии*. От падащо меню виждаме списъка с подкатегории, избираме желаната и със *Запис и изход* едновременно запаметяваме промените и излизаме от формата.
 
-![](20240311-dimensions4.png){ class=align-center }
+![](20240318-dimensions4.png){ class=align-center }
 
 Имаме и друг вариант за настройка на дименсия - от списъка с *Продукти и материали*, без да отваряме формата за редакция на продукта. При този начин за добавяне/редакция на дименсия системата позволява да се маркират множество продукти и едновременно да се избере една обща за тях категория.
 Нека покажем как да настроим продукт "Химикалка", който предварително сме въвели в системата, в категория "Всичко за офиса". Това става, след като го маркираме с десния бутон на мишката и от менюто изберем *Дименсии*.
 
-![](20240311-dimensions5.png){ class=align-center }
+![](20240318-dimensions5.png){ class=align-center }
 
 Отваря се форма, съдържаща всички записани в системата категории продукти. За да открием по-бързо желаната категория, може да използваме бързия филтър, където търсим по име или част от него.
 Настройваме продукта "Химикалка" в подкатегория "Офис консумативи" от категория "Всичко за офиса".
 
-![](20240311-dimensions6.png){ class=align-center }
+![](20240318-dimensions6.png){ class=align-center }
 
 Записваме промените с бутон *Ok* и от този момент продуктът ще участва в справките, филтрирани по горните категории.
 
