Редакция тема Отложено начисление на ДДС

--- a/blog/20240318-cms.md
+++ b/blog/20240318-cms.md
@@ -37,16 +37,16 @@
 
 Системата дава възможност да избираме от следните типове:
 
-    -  тип **Списък** - този тип дименсия ограничава категоризирането само към една от стойностите на списъка.
-    -  тип **Текст** - този тип дименсия дава възможност за категоризиране по свободно въведен текст, който може да се настрои в отделни шаблони.
-    -  тип **Число** - този тип дименсия дава възможност за категоризиране с числови стойности.
-    -  тип **Дата** - този тип дименсия дава възможност за категоризиране по дата.
-    -  тип **Час** - този тип дименсия дава възможност за категоризиране по час.
-    -  тип **Да/Не** - този тип дименсия дава възможност за категоризиране като отговарящи или неотговарящи на определен критерий.
-    -  тип **Множество** - този тип дименсия допуска категоризирането към повече от една стойност на списъка.
-    -  тип **RTF** - този тип дименсия дава възможност за категоризиране по свободно въведен текст - Rich Text Format.
-    -  тип **HTML** - този тип дименсия дава възможност към продуктите да се настрои HTML код.
-	-  тип **Медия** -този тип дименсия дава възможност да се настрои връзка към уебсайт.
+-  тип **Списък** - този тип дименсия ограничава категоризирането само към една от стойностите на списъка.  
+-  тип **Текст** - този тип дименсия дава възможност за категоризиране по свободно въведен текст, който може а е настрои в отделни шаблони.  
+-  тип **Число** - този тип дименсия дава възможност за категоризиране с числови стойности.  
+-  тип **Дата** - този тип дименсия дава възможност за категоризиране по дата.  
+-  тип **Час** - този тип дименсия дава възможност за категоризиране по час.  
+-  тип **Да/Не** - този тип дименсия дава възможност за категоризиране като отговарящи или неотговарящи на ределен критерий.  
+-  тип **Множество** - този тип дименсия допуска категоризирането към повече от една стойност на списъка.  
+-  тип **RTF** - този тип дименсия дава възможност за категоризиране по свободно въведен текст - Rich Text rmat.  
+-  тип **HTML** - този тип дименсия дава възможност към продуктите да се настрои HTML код.  
+-  тип **Медия** -този тип дименсия дава възможност да се настрои връзка към уебсайт.  
 
 3. **Списък стойности** — той се настройва задължително единствено за дименсии от тип *Списък* и *Множество*. Тук ,от опционалното меню, трябва да изберем категория от предварително въведените в *Списъци*.
 Нашият пример изисква в новата дименсия "Всичко за офиса" да укажем, че се прилага списъка "За офиса".
