Fix size of images and list of related links for manual.pdf

--- a/blog/20240219-POS-in-LAN.md
+++ b/blog/20240219-POS-in-LAN.md
@@ -14,8 +14,8 @@
 
 На **POS-PC** трябва да настроите пренасочващ псевдоним с име **ucs-instance**, който ще се използва от Dreem Pos за да достъпва базата данни на Dreem Personal
 
- 1. На **POS-PC** от **Start->Run** стартирайте **cliconfg.exe** (На 64-битови OS стартирайте **C:\Windows\SysWOW64\cliconfg.exe**) 
- 2. В раздел *Alias* на **Client Network Utility** създавайте нов псевдоним **ucs-instance** (виж т.1 на графиката) по **Named Pipes** (виж т.2) и го насочете към инстанция **DREEM-PC\UCS** (виж т.3)
+ 1. На **POS-PC** от **Start->Run** стартирайте **cliconfg.exe** (На 64-битови OS стартирайте **C:\\Windows\\SysWOW64\\cliconfg.exe**) 
+ 2. В раздел *Alias* на **Client Network Utility** създавайте нов псевдоним **ucs-instance** (виж т.1 на графиката) по **Named Pipes** (виж т.2) и го насочете към инстанция **DREEM-PC\\UCS** (виж т.3)
 
    ![](20240219-cliconfig.png){ class=align-center }
 
