Болд-ване на заглавия в Блог

--- a/blog/20240219-POS-in-LAN.md
+++ b/blog/20240219-POS-in-LAN.md
@@ -1,4 +1,4 @@
-# Как да използваме Dreem POS в локална мрежа
+# **Как да използваме Dreem POS в локална мрежа**
 
 ```{warning}
 ВАЖНО! Unicontsoft не поддържа подобна настройка на системата! Описанието и стъпките по-долу са FYI (само за информация)!
